Fix overflow issue with ads.

--- a/src/components/stopPoster/stopPoster.css
+++ b/src/components/stopPoster/stopPoster.css
@@ -34,7 +34,7 @@
 }
 
 .left {
-    composes: column;
+    height: 100%;
     width: 689px;
 }
 
